--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
         <br style="clear:both">
       </div>
       <p>As an assignment for the course <q>Solving Modern Programming Problems with Rust</q>, I wrote an interpreter for the educational programming language Logo. It was really fun to design my strategy, especially building data types to work elegantly with Rust's eccentric systems.</p>
-      <p>I ended up parsing each line of logo code into an Abstract Syntax Tree, and then evaluating them recursively. I enjoyed getting to make use of my knowledge of assembly language, as I processed control flow down to assembly-style branch and jump instructions.</p>
+      <p>I ended up parsing each line of Logo code into an Abstract Syntax Tree, and then evaluating them recursively. I enjoyed getting to make use of my knowledge of assembly language, as I processed control flow down to assembly-style branch and jump instructions.</p>
 
     </div></div>
   </body>
