--- a/bingo2025.html
+++ b/bingo2025.html
@@ -104,12 +104,13 @@
       <p class="compact"><b>Mar 22nd:</b> Got a <b>Hadestown T-Shirt! (1/5).</b></p>
       <p class="compact"><b>Mar 26th:</b> Watched <b>Hadestown</b> again, my <b>fifth</b> theater visit of the year<b>!</b> (I promise I'm normal about Hadestown.)</p>
       <p class="compact"><b>Mar 28th:</b> Applied to <b>Atlassian.</b></p>
-      <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year!</p>
+      <p class="compact"><b>Mar 31st:</b> Unveiled my <b>Hadestown Immersive Lighting Karaoke</b> project to my friends, which I'm hoping will be my CG art project for the year<b>!</b></p>
     
       <h3>April</h3>
       <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! (2/5).</b></p>
       <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>(1/5).</b></p>
       <p class="compact"><b>Apr 15th:</b> Applied to <b>NBN.</b></p>
+      <p class="compact"><b>Apr 23th:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
@@ -179,7 +180,7 @@
 
       <h3>E3: 5 New Wardrobe Pieces</h3>
       <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
-      <p>If I get multiple things on the same day, it'll only count as one!</p>
+      <p>If I get multiple things on the same day, it'll only count as one<b>!</b></p>
 
       <h3>A4: Road Trip w+ Frens</h3>
       <p class="compact">Okay so not a <q>Road Trip</q>, per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
