--- a/bingo2025.html
+++ b/bingo2025.html
@@ -51,8 +51,8 @@
   │              │              │              │              │              │
   ├A5────────────┼B5────────────┼C5────────────┼D5────────────┼E5────────────┤
   │    Put 3     │              │              │              │              │
-  │  Things on   │5 New Recipes │ <span class="inverted"> Get + Wear </span> │  50 Auslan   │ Finish Pact  │
-  │   Website    │              │<span class="inverted"> New Swimwear </span>│    Signs     │              │
+  │  Things on   │5 New Recipes │ <span class="inverted"> Get + Wear </span> │  50 Auslan   │     Read     │
+  │   Website    │              │<span class="inverted"> New Swimwear </span>│    Signs     │something big │
   │              │              │              │              │              │
   └──────────────┴──────────────┴──────────────┴──────────────┴──────────────┘</p>
 
@@ -83,7 +83,6 @@
       <p class="compact"><b>Feb 2nd:</b> Put <b>this bingo page</b> on my website, that's <b>1/3!</b></p>
       <p class="compact"><b>Feb 2nd:</b> Watched <b>Marcel the Shell With Shoes On!</b> <b>6/50.</b></p>
       <p class="compact"><b>Feb 2nd:</b> Logged my <b>first</b> hour of driving<b>!</b></p>
-      <p class="compact"><b>Feb 2nd:</b> Finished reading <b>Pact!</b></p>
       <p class="compact"><b>Feb 6th:</b> Watched <b>Challengers!</b> <b>7/50.</b></p>
       <p class="compact"><b>Feb 10th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>Feb 10th:</b> Climbed my <b>second</b> pink this year<b>!</b> I spent a long time studying it, and then took only two attempts.</p>
@@ -109,8 +108,12 @@
       <h3>April</h3>
       <p class="compact"><b>Apr 6th:</b> Went on an awesome thrift shop run with friends, and got a bunch of things, most notably <b>a crazy sci-fi looking poncho-top-thing! (2/5).</b></p>
       <p class="compact"><b>Apr 7th:</b> Learned to cook <b>Smashed Tacos</b> - very easy<b>!</b> <b>(1/5).</b></p>
+      <p class="compact"><b>Apr 10th:</b> Typeset chapter 1 of jan lawa lili. <b>(1/27).</b></p>
+      <p class="compact"><b>Apr 11th:</b> Typeset chapters 2-3 of jan lawa lili. <b>(3/27).</b></p>
       <p class="compact"><b>Apr 15th:</b> Applied to <b>NBN.</b></p>
-      <p class="compact"><b>Apr 23th:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>(6/27).</b></p>
+      <p class="compact"><b>Apr 23rd:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>(7/27).</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
@@ -215,8 +218,9 @@
 
       <p>Like, my use case for a signed language is communicating with my (hearing) friends when we're in a loud environment, or when one of them goes non-speaking. Auslan/luka pona both satisfy these use cases, and, like, it makes sense to learn whatever my friends are learning, otherwise what's the point?</p>
 
-      <h3>E5: Finish Pact</h3>
-      <p class="compact">Okay, this is a sneaky one. I don't just want to finish reading <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow). I also want to typeset it, design a cover, and get it printed, maybe even make a slipcase<b>!</b> I really like the idea of having physical items to represent digital media.</p>
+      <h3>E5: Read Something Big</h3>
+      <p class="compact">This one was originally to read <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow), but I decided that was cheating a bit as I was already most of the way through before the start of the year.</p>
+      <p>I'll define <q>big</q> as like, over 500k words.</p>
 
     </div></div>
   </body>
