--- a/bingo2025.html
+++ b/bingo2025.html
@@ -42,7 +42,7 @@
   ├A3────────────┼B3────────────┼C3────────────┼D3────────────┼E3────────────┤
   │ Go Off-Grid  │              │              │              │    5 New     │
   │    for a     │   Playtest   │  <span class="inverted"> Turn 21 </span>   │     60kg     │   Wardrobe   │
-  │   Weekend    │  Own TTRPG   │              │              │    Pieces    │
+  │   Weekend    │   Own TTG    │              │              │    Pieces    │
   │              │              │              │              │              │
   ├A4────────────┼B4────────────┼C4────────────┼D4────────────┼E4────────────┤
   │              │              │              │              │              │
@@ -114,6 +114,7 @@
       <p class="compact"><b>Apr 23rd:</b> Typeset chapters 4-6 of jan lawa lili. <b>(6/27).</b></p>
       <p class="compact"><b>Apr 23rd:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>(7/27).</b></p>
+      <p class="compact"><b>Apr 26th:</b> Watched <b>Sprited Away!</b> <b>13/50.</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
@@ -161,8 +162,8 @@
       <h3>A3: Go Off-Grid for a Weekend</h3>
       <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
 
-      <h3>B3: Playtest Own TTRPG</h3>
-      <p class="compact">I love TTRPG design, I think the medium is awesome<b>!</b> I don't want to make this <q>write</q> a TTRPG or <q>finish</q> a TTRPG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
+      <h3>B3: Playtest Own TTG</h3>
+      <p class="compact">I love TTRPG and board game design, I think the medium is awesome<b>!</b> I don't want to make this <q>write</q> a TTG or <q>finish</q> a TTG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
 
       <h3>C3: Turn 21 [✓]</h3>
       <p class="compact">My free space<b>!</b> I think it's fun that my free space can increment each year.</p>
@@ -196,6 +197,8 @@
 
       <h3>D4: Watch 50 Movies</h3>
       <p class="compact">Last year I watched 44 movies, and this year, I wanna do, a little bit more<b>!</b> Part of a larger trend I'm working on where I'm trying to be more intentional with my media consumption - less scrolling, less slop.</p>
+
+      <p>I'm allowed to watch movies I've seen before, but only the first time I watch it this year will count.</p>
 
       <h3>E4: 3 Connected TTRPG Sessions</h3>
       <p class="compact">Specifically in a non-D&D indie TTRPG with, like, good game design. I'm interested in a lot of <b>Jay Dragon's</b> work in the way that it, like, doesn't hold to the near-ubiquitous expectations of the master-player dynamic. So <b>Wanderhome</b> and <b>Sleepaway</b> are solid options, along with a million other games.</p>
