--- a/bingo2025.html
+++ b/bingo2025.html
@@ -115,6 +115,8 @@
       <p class="compact"><b>Apr 23rd:</b> Watched <b>Hadestown</b> for the final time before they leave Sydney, my <b>sixth</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>Apr 24rd:</b> Typeset chapter 7 of jan lawa lili. <b>(7/27).</b></p>
       <p class="compact"><b>Apr 26th:</b> Watched <b>Sprited Away!</b> <b>13/50.</b></p>
+      <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
+
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
