--- a/bingo2025.html
+++ b/bingo2025.html
@@ -117,6 +117,8 @@
       <p class="compact"><b>Apr 26th:</b> Watched <b>Sprited Away!</b> <b>13/50.</b></p>
       <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
 
+      <h3>May</h3>
+      <p class="compact"><b>May 1st:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
