--- a/bingo2025.html
+++ b/bingo2025.html
@@ -118,7 +118,9 @@
       <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
 
       <h3>May</h3>
-      <p class="compact"><b>May 1st:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
+      <p class="compact"><b>May 2nd:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
+      <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>May 3rd:</b> Read <b>Taking Root</b>, Arc <b>1/20</b> of <b>Twig!</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
