--- a/bingo2025.html
+++ b/bingo2025.html
@@ -121,6 +121,8 @@
       <p class="compact"><b>May 2nd:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
       <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>May 3rd:</b> Read <b>Taking Root</b>, Arc <b>1/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>May 4th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 4th:</b> Watched <b>Millenium Actress!</b> <b>15/50.</b></p>
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
