--- a/bingo2025.html
+++ b/bingo2025.html
@@ -119,10 +119,15 @@
 
       <h3>May</h3>
       <p class="compact"><b>May 2nd:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
-      <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
+      <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables: The Arena Spectacular</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>May 3rd:</b> Read <b>Taking Root</b>, Arc <b>1/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 4th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>May 4th:</b> Watched <b>Millenium Actress!</b> <b>15/50.</b></p>
+      <p class="compact"><b>May 5th:</b> Rendered <b>Road to Hell!</b> <b>1/18.</b></p>
+      <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song</b> <b>2/18.</b></p>
+      <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top</b> <b>3/18.</b></p>
+      <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown</b> <b>5/18.</b></p>
+
 
       <h2>In Detail</h2>
       <p>Not every goal is simple enough to fit perfect in a little bingo square - below you can find additional detail about each goal, as well as musings or work-in-progress planning.</p>
