--- a/bingo2025.html
+++ b/bingo2025.html
@@ -118,7 +118,7 @@
       <p class="compact"><b>Apr 27th:</b> Watched <b>The Lighthouse!</b> <b>14/50.</b></p>
 
       <h3>May</h3>
-      <p class="compact"><b>May 2nd:</b> Synced the lyrics of the <b>first act</b> of Hadestown<b>!</b> (For the karaoke project.)</p>
+      <p class="compact"><b>May 2nd:</b> Time-synced the lyrics of the <b>first act</b> of Hadestown<b>!</b></p>
       <p class="compact"><b>May 3rd:</b> Watched <b>Les Misérables: The Arena Spectacular</b>, my <b>seventh</b> theater visit of the year<b>!</b></p>
       <p class="compact"><b>May 3rd:</b> Read <b>Taking Root</b>, Arc <b>1/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 4th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
