--- a/bingo2025.html
+++ b/bingo2025.html
@@ -127,6 +127,9 @@
       <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song</b> <b>2/18.</b></p>
       <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top</b> <b>3/18.</b></p>
       <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown</b> <b>5/18.</b></p>
+      <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant</b> <b>6/18.</b></p>
+      <p class="compact"><b>May 10th:</b> Went bouldering for the <b>second</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 10th:</b> Read <b>Cat out of the Bag</b>, Arc <b>2/20</b> of <b>Twig!</b></p>
 
 
       <h2>In Detail</h2>
