--- a/bingo2025.html
+++ b/bingo2025.html
@@ -130,6 +130,11 @@
       <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant</b> <b>6/18.</b></p>
       <p class="compact"><b>May 10th:</b> Went bouldering for the <b>second</b> time this month<b>!</b></p>
       <p class="compact"><b>May 10th:</b> Read <b>Cat out of the Bag</b>, Arc <b>2/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>May 12th:</b> Rendered <b>Hey, Little Songbird</b> through to <b>When the Chips are Down</b> <b>7/18.</b></p>
+      <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone</b> <b>8/18.</b></p>
+      <p class="compact"><b>May 14th:</b> Read <b>Lips Sealed</b>, Arc <b>3/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>May 14th:</b> Went bouldering for the <b>third</b> time this month<b>!</b></p>
+
 
 
       <h2>In Detail</h2>
