index: add toki pona toggle

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/theme.js" defer></script>
+    <script src="/assets/js/lang.js" defer></script>
 
   </head>
 
@@ -22,6 +23,13 @@
         </svg>
       </button>
 
+      <button data-lang-toggle>
+        <span class="en-icon">EN</span>
+        <span class="tp-icon">&#xFFA31;</span>
+      </button>
+
+      <div class="en">
+
       <h1>Hello!</h1>
 
       <p>I'm doing some rennovations to my site, so it's a bit under construction for now!</p>
@@ -36,6 +44,27 @@
       </ul>
 
       <p>Thanks for stopping by!</p>
+
+      </div>
+
+      <div class="tp sitelen-pona">
+
+        <h1>toki a</h1>
+
+        <p>tenpo ni2 la mi pali e lipu mi. ni1 la ona li ante li kama pona</p>
+
+        <p>mi wile ala e ni3. sina tawa la sina pilin ike. ni1 la mi pana e lipu sona pi lipu mi tawa sina</p>
+  
+        <ul>
+          <li><a href="/bingo2025">lipu pi wile mi lon tenpo sike mute ale mute luka</a></li>
+          <li><a href="/comp1521">sona mi pi ilo nanpa tan pali mi lon kulupu sona [jan,uta,weka,,nena,,sama,,pali,uta,jan,uta,]</a> <b>te ike en kama pona to</b></li>
+          <li><a href="/blackhole">sitelen tawa nanpa pi suno pimeja</a></li>
+          <li><a href="/got">lipu ilo li sona e ni3: mi lukin e sitelen tawa te musi pi supa lawa to nanpa seme</a></li>
+        </ul>
+  
+        <p>pona tawa sina tan ni3: sina lukin e lipu mi</p>
+  
+      </div>
 
     </div></div>
   </body>
