--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
       <div class="en">
 
-      <h1>Hello!</h1>
+      <h1>Hello<b>!</b></h1>
 
-      <p>I'm doing some rennovations to my site, so it's a bit under construction for now!</p>
+      <p>I'm doing some rennovations to my site, so it's a bit under construction for now<b>!</b></p>
 
       <p>So as not to leave you disappointed, I'll spare you a sitemap:</p>
 
@@ -43,7 +43,7 @@
         <li><a href="/got">Game of Thrones Progress Tracker</a></li>
       </ul>
 
-      <p>Thanks for stopping by!</p>
+      <p>Thanks for stopping by<b>!</b></p>
 
       </div>
 
@@ -53,11 +53,11 @@
 
         <p>tenpo ni2 la mi pali e lipu mi. ni1 la ona li ante li kama pona</p>
 
-        <p>mi wile ala e ni3. sina tawa la sina pilin ike. ni1 la mi pana e lipu sona pi lipu mi tawa sina</p>
+        <p>mi wile ala e ni3. sina tawa la sina pilin ike. ni1 la mi pana e sona pi lipu mi tawa sina</p>
   
         <ul>
-          <li><a href="/bingo2025">lipu pi wile mi lon tenpo sike mute ale mute luka</a></li>
-          <li><a href="/comp1521">sona mi pi ilo nanpa tan pali mi lon kulupu sona [jan,uta,weka,,nena,,sama,,pali,uta,jan,uta,]</a> <b>te ike en kama pona to</b></li>
+          <li><a href="/bingo2025">lipu pi wile mi lon tenpo sike mute1 ale mute1 luka</a></li>
+          <li><a href="/comp1521">sona mi pi ilo nanpa tan pali mi lon kulupu sona [jan,uta,weka,,nena,,sama,,pali,uta,jan,uta,]</a><b>te ike en kama pona to</b></li>
           <li><a href="/blackhole">sitelen tawa nanpa pi suno pimeja</a></li>
           <li><a href="/got">lipu ilo li sona e ni3: mi lukin e sitelen tawa te musi pi supa lawa to nanpa seme</a></li>
         </ul>
