--- a/bingo2025.html
+++ b/bingo2025.html
@@ -134,7 +134,7 @@
       <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone</b> <b>8/18.</b></p>
       <p class="compact"><b>May 14th:</b> Read <b>Lips Sealed</b>, Arc <b>3/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 14th:</b> Went bouldering for the <b>third</b> time this month<b>!</b></p>
-
+      <p class="compact"><b>May 16th:</b> Read <b>Stitch in Time</b>, Arc <b>4/20</b> of <b>Twig!</b></p>
 
 
       <h2>In Detail</h2>
