--- a/bingo2025.html
+++ b/bingo2025.html
@@ -135,6 +135,10 @@
       <p class="compact"><b>May 14th:</b> Read <b>Lips Sealed</b>, Arc <b>3/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 14th:</b> Went bouldering for the <b>third</b> time this month<b>!</b></p>
       <p class="compact"><b>May 16th:</b> Read <b>Stitch in Time</b>, Arc <b>4/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>May 23rd:</b> Went bouldering for the <b>fourth</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me</b> <b>9/18.</b></p>
+      <p class="compact"><b>May 25th:</b> Logged my <b>third</b> hour of driving<b>!</b></p>
+      <p class="compact"><b>May 25th:</b> Went bouldering for the <b>fifth</b> time this month<b>!</b></p>
 
 
       <h2>In Detail</h2>
