--- a/bingo2025.html
+++ b/bingo2025.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
-    <meta name='viewport' content='width=device-width'/>
+    <meta name='viewport' content='width=device-width'/>we
     <title>2025 Bingo</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
@@ -36,7 +36,7 @@
   │              │              │              │              │              │
   ├A2────────────┼B2────────────┼C2────────────┼D2────────────┼E2────────────┤
   │              │              │              │ Learn a new  │              │
-  │     Try      │  10 Theater  │    Tattoo    │  Piano/Lyre  │  Do 3 Pinks  │
+  │     Try      │  10 Theater  │    Tattoo    │  Piano/Lyre  │ <span class="inverted"> Do 3 Pinks </span> │
   │ Bookbinding  │    Visits    │              │     Song     │              │
   │              │              │              │              │              │
   ├A3────────────┼B3────────────┼C3────────────┼D3────────────┼E3────────────┤
@@ -139,6 +139,9 @@
       <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me</b> <b>9/18.</b></p>
       <p class="compact"><b>May 25th:</b> Logged my <b>third</b> hour of driving<b>!</b></p>
       <p class="compact"><b>May 25th:</b> Went bouldering for the <b>fifth</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 27th:</b> Went bouldering for the <b>sixth</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 29th:</b> Went bouldering for the <b>seventh</b> time this month<b>!</b></p>
+      <p class="compact"><b>May 29th:</b> <span class="inverted">&nbsp;Climbed my <b>third</b> pink this year<b>!</b>nbsp;</span> It was a big vertical slab climb, with teeny tiny handholds.</p>
 
 
       <h2>In Detail</h2>
