--- a/bingo2025.html
+++ b/bingo2025.html
@@ -141,7 +141,7 @@
       <p class="compact"><b>May 25th:</b> Went bouldering for the <b>fifth</b> time this month<b>!</b></p>
       <p class="compact"><b>May 27th:</b> Went bouldering for the <b>sixth</b> time this month<b>!</b></p>
       <p class="compact"><b>May 29th:</b> Went bouldering for the <b>seventh</b> time this month<b>!</b></p>
-      <p class="compact"><b>May 29th:</b> <span class="inverted">&nbsp;Climbed my <b>third</b> pink this year<b>!</b>nbsp;</span> It was a big vertical slab climb, with teeny tiny handholds.</p>
+      <p class="compact"><b>May 29th:</b> <span class="inverted">&nbsp;Climbed my <b>third</b> pink this year<b>!</b>&nbsp;</span> It was a big vertical slab climb, with teeny tiny handholds.</p>
 
 
       <h2>In Detail</h2>
