--- a/bingo2025.html
+++ b/bingo2025.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="utf-8" />
-    <meta name='viewport' content='width=device-width'/>we
+    <meta name='viewport' content='width=device-width'/>
     <title>2025 Bingo</title>
 
     <link rel="stylesheet" href="/assets/css/style.css">
