--- a/bingo2025.html
+++ b/bingo2025.html
@@ -46,8 +46,8 @@
   │              │              │              │              │              │
   ├A4────────────┼B4────────────┼C4────────────┼D4────────────┼E4────────────┤
   │              │              │              │              │              │
-  │  Road Trip   │   Practice   │  Boulder x8  │   Watch 50   │ 3 Connected  │
-  │   w+ Frens   │    Voice     │  in 1 Month  │    Movies    │TTRPG Sessions│
+  │  Road Trip   │   Practice   │ <span class="inverted"> Boulder x8 </span> │   Watch 50   │ 3 Connected  │
+  │   w+ Frens   │    Voice     │ <span class="inverted"> in 1 Month </span> │    Movies    │TTRPG Sessions│
   │              │              │              │              │              │
   ├A5────────────┼B5────────────┼C5────────────┼D5────────────┼E5────────────┤
   │    Put 3     │              │              │              │              │
@@ -124,24 +124,28 @@
       <p class="compact"><b>May 4th:</b> Went bouldering for the <b>first</b> time this month<b>!</b></p>
       <p class="compact"><b>May 4th:</b> Watched <b>Millenium Actress!</b> <b>15/50.</b></p>
       <p class="compact"><b>May 5th:</b> Rendered <b>Road to Hell!</b> <b>1/18.</b></p>
-      <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song</b> <b>2/18.</b></p>
-      <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top</b> <b>3/18.</b></p>
-      <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown</b> <b>5/18.</b></p>
-      <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant</b> <b>6/18.</b></p>
+      <p class="compact"><b>May 6th:</b> Rendered <b>Any Way the Wind Blows</b> through to <b>Wedding Song!</b> <b>2/18.</b></p>
+      <p class="compact"><b>May 7th:</b> Rendered <b>Epic I</b> through to <b>Livin' it Up on Top!</b> <b>3/18.</b></p>
+      <p class="compact"><b>May 8th:</b> Rendered <b>All I've Ever Known</b> through to <b>Way Down Hadestown!</b> <b>5/18.</b></p>
+      <p class="compact"><b>May 10th:</b> Rendered <b>A Gathering Storm</b> through to <b>Chant!</b> <b>6/18.</b></p>
       <p class="compact"><b>May 10th:</b> Went bouldering for the <b>second</b> time this month<b>!</b></p>
       <p class="compact"><b>May 10th:</b> Read <b>Cat out of the Bag</b>, Arc <b>2/20</b> of <b>Twig!</b></p>
-      <p class="compact"><b>May 12th:</b> Rendered <b>Hey, Little Songbird</b> through to <b>When the Chips are Down</b> <b>7/18.</b></p>
-      <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone</b> <b>8/18.</b></p>
+      <p class="compact"><b>May 12th:</b> Rendered <b>Hey, Little Songbird</b> through to <b>When the Chips are Down!</b> <b>7/18.</b></p>
+      <p class="compact"><b>May 13th:</b> Rendered <b>Gone, I'm Gone!</b> <b>8/18.</b></p>
       <p class="compact"><b>May 14th:</b> Read <b>Lips Sealed</b>, Arc <b>3/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 14th:</b> Went bouldering for the <b>third</b> time this month<b>!</b></p>
       <p class="compact"><b>May 16th:</b> Read <b>Stitch in Time</b>, Arc <b>4/20</b> of <b>Twig!</b></p>
       <p class="compact"><b>May 23rd:</b> Went bouldering for the <b>fourth</b> time this month<b>!</b></p>
-      <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me</b> <b>9/18.</b></p>
+      <p class="compact"><b>May 24th:</b> Rendered <b>Wait for Me!</b> <b>9/18.</b></p>
       <p class="compact"><b>May 25th:</b> Logged my <b>third</b> hour of driving<b>!</b></p>
       <p class="compact"><b>May 25th:</b> Went bouldering for the <b>fifth</b> time this month<b>!</b></p>
       <p class="compact"><b>May 27th:</b> Went bouldering for the <b>sixth</b> time this month<b>!</b></p>
       <p class="compact"><b>May 29th:</b> Went bouldering for the <b>seventh</b> time this month<b>!</b></p>
       <p class="compact"><b>May 29th:</b> <span class="inverted">&nbsp;Climbed my <b>third</b> pink this year<b>!</b>&nbsp;</span> It was a big vertical slab climb, with teeny tiny handholds.</p>
+      <p class="compact"><b>May 29th:</b> Measured <b>≥53kg</b>.</p>
+      <p class="compact"><b>May 30th:</b> Read <b>Esprit de Corpse</b>, Arc <b>5/20</b> of <b>Twig!</b></p>
+      <p class="compact"><b>May 31st:</b> Logged my <b>fourth</b> & <b>fifth</b> hour of driving<b>!</b></p>
+      <p class="compact"><b>May 31st:</b> <span class="inverted">&nbsp;Went bouldering for the <b>eighth</b> time this month<b>!</b>&nbsp;</span></p>
 
 
       <h2>In Detail</h2>
@@ -156,18 +160,24 @@
       <h3>C1: CG Art Piece</h3>
       <p class="compact">Haven't done art in a while<b>!</b> This goal is to help me get back into it. Of note, I want to do something I'm actually proud of, to tick this goal off. (This is true of most of my softer/non-numerical goals.)</p>
 
+      <p>The project I'm currently pursuing for this is my <b>Hadestown Immersive Karaoke</b> project. I think it would be fun to gather some friends for karaoke night, but then just do Hadestown, the whole thing, each assigned a character. Thanks to scope creep, the CG part of this project is making backing videos for the karaoke, replicating 2 hours worth of lighting cues, which is, a trek<b>!</b></p>
+
+      <p>Once I'm further along in this project, I'll likely make a webpage for it, talking about some of the decisions I made along the way.</p>
+
       <h3>D1: Coding Project</h3>
       <p class="compact">A coding project is like an art project, but more employable<b>!</b> Can't be for work or uni, has to be a personal project.</p>
 
+      <p>For over a year now I've toyed with the idea of a witchy clock. I often find myself looking up sunset times, moon phase, or when the equinox is. I think it would be awesome to design a webpage with a beautiful, complex astronomical clock, to be able to see all this information easily. It'd be my perfect New Tab page<b>!</b></p>
+
       <h3>E1: Grad Offer</h3>
       <p class="compact">I'm bad at having the motivation to apply for jobs, so by having this on my bingo board, when I look at the board to see how to spend my time, I'll get a little reminder to apply.</p>
-
-      <p>I do, of course, apparently hear back from Canva as to whether I got the grad role there from my internship around April, if I recall. I think some places open their applications for grad roles a little earlier than that, though, so I'll have to apply to places anyway.</p>
 
       <h3>A2: Try Bookbinding</h3>
       <p class="compact">Specifically, like, handbinding a book. I think this would be cool for a notebook for a TTRPG character. I want to buy paper of the right grain and use a bone folder and stitch and glue signatures, I think it would be fun<b>!</b></p>
 
       <p>My current plan is to bind <a href="https://jan-lawa-lili.gitlab.io/">jan lawa lili</a>, the <a href="https://en.wikipedia.org/wiki/Toki_Pona">toki pona</a> translation of <a href="https://en.wikipedia.org/wiki/The_Little_Prince">The Little Prince</a>, in the <b>sitelen pona</b> script. I find both the book and the language to be very beautiful and special to me, and, like, this is an obscure enough project that nobody will have done it before.</p>
+
+      <p>I think there's something special about holding in your hands an object that nobody else has seen before.</p>
 
       <h3>B2: 10 Theater Visits</h3>
       <p class="compact">Live music, live performance, it always blows me away, it's so amazing to experience. If I go to 10 shows I'll have had a very nice year :D</p>
@@ -180,15 +190,13 @@
       <h3>D2: Learn a new Piano/Lyre Song</h3>
       <p class="compact">Every time I sit down at an instrument, I play, like, the one song I already know, because I find it frustrating to learn new songs. For this goal I have to actually push through and fully learn a whole new song in its entirety.</p>
 
-      <p>I was originally looking at <b>Starchild</b>, from <b>Ghost Quartet</b>, but I think the piano part is too simple for me to actually be proud enough of it to fulfill this bingo square. My current thought is more along the lines of <b>Why We Build the Wall</b> from <b>Hadestown</b>. (It's so fun to sing and play at once, and I love singing<b>!</b>)</p>
+      <p>It's so fun to sing and play an instrument at once, and I love singing, so it would be good to work that into this. I was first thinking <b>Starchild</b>, from <b>Ghost Quartet</b>, then maybe something from <b>Hadestown</b>, and now I'm thinking <b>Mein Herr</b> from <b>Carabet!</b></p>
 
       <h3>E2: Do 3 Pinks</h3>
       <p class="compact"><b>Pink</b> is a difficulty in my bouldering gym, around V3. Usually I find I can flash most <b>teals</b> (V2ish), but have no idea how to start pinks - this goal is designed to help me persevere and overcome the difficulty spike between teal and pink.</p>
 
-      <p>Ngl I'm kinda crushing this goal, so I could up the number or even the colour to red? We'll see how I'm feeling.</p>
-
       <h3>A3: Go Off-Grid for a Weekend</h3>
-      <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables.</p>
+      <p class="compact">I think it would be nice. Off-grid here means not using the internet - with potential exceptions for like, maps and train timetables, but it would be cool to print those out as well.</p>
 
       <h3>B3: Playtest Own TTG</h3>
       <p class="compact">I love TTRPG and board game design, I think the medium is awesome<b>!</b> I don't want to make this <q>write</q> a TTG or <q>finish</q> a TTG, that's too high pressure. I want to reach a point where it should be playtested and then actually playtest it, instead of leaving it to gather dust.</p>
@@ -212,10 +220,11 @@
 
       <h3>E3: 5 New Wardrobe Pieces</h3>
       <p class="compact">My wardrobe could do with just an itty bit of expanding, and also, going shopping with friends is fun<b>!</b></p>
-      <p>If I get multiple things on the same day, it'll only count as one<b>!</b></p>
+
+      <p>If I get multiple things in the same month, it'll only count as one<b>!</b></p>
 
       <h3>A4: Road Trip w+ Frens</h3>
-      <p class="compact">Okay so not a <q>Road Trip</q>, per se, that's just in my vocabulary because that's what everyone in CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
+      <p class="compact">Okay so not a <q>Road Trip</q>, per se, that's just in my vocabulary because that's what everyone in UNSW CSESoc called holidays. Any kind of holiday adventure will do<b>!</b></p>
 
       <h3>B4: Practice Voice</h3>
       <p class="compact">Bit of a broad goal, I just want to do something that involves recording my voice, listening to the recording, and then trying to improve. This could range from voice training to singing<b>!</b></p>
@@ -252,6 +261,8 @@
       <h3>E5: Read Something Big</h3>
       <p class="compact">This one was originally to read <a href="https://pactwebserial.wordpress.com/">Pact</a>, (a webserial by wildbow), but I decided that was cheating a bit as I was already most of the way through before the start of the year.</p>
       <p>I'll define <q>big</q> as like, over 500k words.</p>
+
+      <p>Instead, I'm currently working on <a href="https://twigwebserial.wordpress.com/">Twig</a>, another webserial by the same author.</p>
 
     </div></div>
   </body>
